--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,9 @@ dependencies {
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Mockito
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+
 
 }
